.k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rta-auth
  namespace: real-time-analytics
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rta-auth
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rta-auth
    spec:
      containers:
      - image: ghcr.io/raghiba/rta-auth:latest
        imagePullPolicy: Always
        name: rta-auth
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
