.k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rta-auth
  namespace: real-time-analytics
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: rta-auth
  sessionAffinity: None
  type: NodePort
