.k8s/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-auth-ingress
  namespace: real-time-analytics
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-http01-prod"
spec:
  rules:
  - host: rta-auth.raghiba.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: analytics-auth
            port:
              number: 80
  tls:
  - hosts:
    - rta-auth.raghiba.com
    secretName: rta-auth-tls
